[package]
name = "bthomed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow            = "1.0.95"
axum              = "0.7.9"
btleplug          = "0.11.7"
bytes             = "1.9.0"
clap              = { version = "4.5.23", features = ["derive"] }
futures           = "0.3.31"
log               = "0.4.22"
pretty_env_logger = "0.5.0"
tokio             = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
